esphome/esphome-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: esphome
spec:
  selector:
    matchLabels:
      app: esphome
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: esphome
    spec:
      dnsConfig:
        nameservers:
          - 192.168.1.1
      dnsPolicy: None
      containers:
      - name: esphome
        image: esphome/esphome:latest@sha256:4ad55931c0186d2910dc128526237acabb422a662697a4e8bb356d390a1332a1
        ports:
        - containerPort: 6052
        volumeMounts:
        - name: esphome-config
          mountPath: /config
        - name: esphome-secrets
          mountPath: /config/secrets.yaml
          subPath: secrets.yaml
      volumes:
      - name: esphome-config
        persistentVolumeClaim:
          claimName: esphome-config-ceph
      - name: esphome-secrets
        secret:
          secretName: esphome-secrets
