esphome/esphome-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: esphome
spec:
  selector:
    app: esphome
  ports:
    - name: http
      port: 6052
      protocol: TCP
      targetPort: 6052
  type: ClusterIP
